--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "calendar",
+  "main": "./lib/calendar.js",
   "description": "calendar generator",
   "version": "0.1.0",
   "repository": {
     "type" : "git",
     "url" : "git://github.com/ramalho/calendar.js.git"
   },
-  "author": "Luciano Ramalho <luciano@ramalho.org> (http://turing.com.br)",
-  "main": "index",
+  "author": "Luciano Ramalho <luciano@ramalho.org> (http://turing.com.br)"
 }
