--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "calendar",
   "main": "./lib/calendar.js",
   "description": "calendar generator",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "repository": {
     "type" : "git",
     "url" : "git://github.com/ramalho/calendar.js.git"
   },
-  "author": "Luciano Ramalho <luciano@ramalho.org> (http://turing.com.br)"
+  "author": "Luciano Ramalho <luciano@ramalho.org> (http://standupdev.com)",
+  "license": "MIT"
 }
