--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "calendar-es6",
   "main": "./lib/calendar.js",
   "description": "calendar generator based on calendar eith ES6 classes and a new method",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "repository": {
     "type" : "git",
-    "url" : "git://github.com/copious-world/calendar.js.git"
+    "url" : "git://github.com/rleddy/calendar.js.git"
   },
   "author": "Luciano Ramalho <luciano@ramalho.org> (http://standupdev.com) [added method : R Leddy]",
   "license": "MIT"
