--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "calendar-es6",
+  "version": "0.1.4",
+
+  "module": "./dist/index.mjs",
   "main": "./lib/calendar.js",
   "description": "calendar generator based on calendar eith ES6 classes and a new method",
-  "version": "0.1.3",
+   "scripts": {
+    "build": "rollup -c",
+    "prepublishOnly": "npm run build"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "rollup": "^2.0.0",
+    "rollup-plugin-svelte": "^6.0.0"
+  },
   "repository": {
     "type" : "git",
     "url" : "git://github.com/rleddy/calendar.js.git"
   },
   "author": "Luciano Ramalho <luciano@ramalho.org> (http://standupdev.com) [added method : R Leddy]",
-  "license": "MIT"
+  "license": "MIT",
+  "files": [
+    "lib",
+    "dist"
+  ]
 }
